# space-rocks

./: CMakeLists.txt  LICENSE  README.md  background.cpp  background.h  defs.h  entity.cpp  entity.h  gameengine.cpp  gameengine.h  gamestate.h  graphics.cpp  graphics.h  main.cpp  playstate.cpp  playstate.h  ship.cpp
src/: background.h  entity.h  gameengine.cpp  gamestate.h  graphics.h  main.cpp  player.h  playstate.cpp  playstate.h
